--- a/less/index.less
+++ b/less/index.less
@@ -1,1 +1,14 @@
 // Follow the order in the readme
+
+// Variable and Mixins
+@import "mixins.less";
+@import "variables.less";
+
+// Reset and Global 
+@import "reset.less";
+@import "global.less";
+
+// All other files
+@import "navigation.less";
+@import "footer";
+@import "home-page.less";
