Completed Desktop Design

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,36 @@
 // Navigation Styles here
+
+.navigation{
+
+	display: flex;
+	justify-content: space-between;
+	margin-top: 4rem;
+	margin-bottom: 2rem;
+	
+	@media @mobile{
+		flex-wrap: wrap;
+	}
+	
+	h1{
+		// border: 2px solid red;
+
+		a{
+			text-decoration: none;
+			color: black;
+		}
+	}
+
+	nav{
+		// border: 2px solid red;
+		width: 40%;
+		font-size: 1.5rem;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+
+		a{
+			text-decoration: none;
+			color: black;
+		}
+	}
+}
