--- a/css/index.css
+++ b/css/index.css
@@ -168,16 +168,40 @@ img {
   width: 100%;
   margin: 0 auto;
 }
-.footer {
-  width: 100%;
-  border-top: 2px dashed silver;
-  background: #FFEBCD;
+hr {
+  border-top: 0.2rem dashed #C0C0C0;
 }
-.footer p {
-  text-align: center;
-  color: #212529;
-  font-size: 1.6rem;
-  padding: 20px;
+hr:first-of-type {
+  margin: 0;
+}
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 4rem;
+  margin-bottom: 2rem;
+}
+@media (max-width:500px) {
+  .navigation {
+    flex-wrap: wrap;
+  }
+}
+.navigation h1 a {
+  text-decoration: none;
+  color: black;
+}
+.navigation nav {
+  width: 40%;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.navigation nav a {
+  text-decoration: none;
+  color: black;
+}
+.home .funbus-section .funbus-text-container {
+  margin: 2rem 0;
 }
 .home .content-section {
   margin: 30px 0;
@@ -224,4 +248,48 @@ img {
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+.home .content-pick .destination .btn {
+  background-color: #008080;
+  color: #FFFFFF;
+  border: 2px solid #C0C0C0;
+  font-size: 1.8rem;
+  text-align: center;
+  padding: 1rem 0;
+  border-radius: 0.8rem;
+}
+.footer {
+  width: 100%;
+  border-top: 2px dashed silver;
+  background: #FFEBCD;
+}
+.footer p {
+  text-align: center;
+  color: #212529;
+  font-size: 1.6rem;
+  padding: 20px;
+}
+@media (max-width:500px) {
+  .container {
+    max-width: 450px;
+  }
+}
+@media (max-width:500px) {
+  .navigation {
+    flex-wrap: wrap;
+  }
+}
+@media (max-width:500px) {
+  .navigation h1 {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width:500px) {
+  .navigation nav {
+    width: 100%;
+    justify-content: space-between;
+    border: 2px solid red;
+  }
 }
