--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,13 +1,19 @@
 .home {
 
+	.funbus-section{
+		
+		.funbus-text-container{
+			margin: 2rem 0;
+		}
+
+	}
+
   .content-section {
     margin: 30px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
-    
     .text-content {
       width: 48%;
       padding-right: 1%;
@@ -55,7 +61,12 @@
 
     .destination {
       width: 30%;
-      margin-bottom: 30px;
+			margin-bottom: 30px;
+			
+			.btn{
+				.oceanButton();
+			}
+
     }
   }
 }// home
