--- a/less/index.less
+++ b/less/index.less
@@ -2,7 +2,7 @@
 
 // Variable and Mixins
 @import "mixins.less";
-@import "variables.less";
+// @import "variables.less";
 
 // Reset and Global 
 @import "reset.less";
@@ -10,5 +10,7 @@
 
 // All other files
 @import "navigation.less";
-@import "footer";
 @import "home-page.less";
+@import "footer";
+
+@import "variables.less";
