--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,11 @@
 // Mixins in here
+
+.oceanButton(){
+	background-color: @button-bg-dark;
+	color: @main-bg;
+	border: 2px solid @silver;
+	font-size: 1.8rem;
+	text-align: center;
+	padding: 1rem 0;
+	border-radius: .8rem;
+}
