Mobile design complete

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -16,12 +16,20 @@
 
     .text-content {
       width: 48%;
-      padding-right: 1%;
+			padding-right: 1%;
+			
+			@media @mobile{
+				width: 100%;
+			}
     }
 
     .img-content {
       width: 48%;
-      padding-left: 1%;
+			padding-left: 1%;
+
+			@media @mobile{
+				width: 100%;
+			}
 
       img {
         border-radius: 10px;
@@ -31,7 +39,12 @@
 
   .inverse-content {
     padding-bottom: 30px;
-    border-bottom: 2px dashed @navigation-border;
+		border-bottom: 2px dashed @navigation-border;
+		
+		@media @mobile{
+			display: flex;
+			flex-wrap: wrap-reverse;
+		}
 
     .text-content {
       padding-left: 1%;
@@ -46,7 +59,11 @@
 
   .content-destination {
     width: 75%;
-    margin: 0 auto 30px;
+		margin: 0 auto 30px;
+		
+		@media @mobile{
+			width: 100%;
+		}
 
     img {
       border-radius: 10px;
@@ -57,11 +74,19 @@
     padding-top: 30px;
     border-top: 2px dashed @navigation-border;
     display: flex;
-    justify-content: space-between;
+		justify-content: space-between;
+
+		@media @mobile{
+			flex-wrap: wrap;
+		}
 
     .destination {
       width: 30%;
 			margin-bottom: 30px;
+
+			@media @mobile{
+				width: 100%;
+			}
 			
 			.btn{
 				.oceanButton();
