--- a/less/global.less
+++ b/less/global.less
@@ -42,7 +42,11 @@ img {
 .container {
   max-width: 800px;
   width: 100%;
-  margin: 0 auto;
+	margin: 0 auto;
+	
+	@media @mobile{
+		max-width: 450px;
+	}
 }
 
 hr{
