--- a/less/navigation.less
+++ b/less/navigation.less
@@ -14,6 +14,12 @@
 	h1{
 		// border: 2px solid red;
 
+		@media @mobile{
+			width: 100%;
+			text-align: center;
+			margin-bottom: 2rem;
+		}
+
 		a{
 			text-decoration: none;
 			color: black;
@@ -28,9 +34,15 @@
 		justify-content: space-between;
 		align-items: center;
 
+		@media @mobile {
+			width: 100%;
+			justify-content: space-around;
+		}
+
 		a{
 			text-decoration: none;
 			color: black;
 		}
+
 	}
 }
