--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,11 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+@media (max-width:500px) {
+  .container {
+    max-width: 450px;
+  }
+}
 hr {
   border-top: 0.2rem dashed #C0C0C0;
 }
@@ -185,6 +190,13 @@ hr:first-of-type {
     flex-wrap: wrap;
   }
 }
+@media (max-width:500px) {
+  .navigation h1 {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+}
 .navigation h1 a {
   text-decoration: none;
   color: black;
@@ -195,6 +207,12 @@ hr:first-of-type {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+@media (max-width:500px) {
+  .navigation nav {
+    width: 100%;
+    justify-content: space-around;
+  }
 }
 .navigation nav a {
   text-decoration: none;
@@ -213,9 +231,19 @@ hr:first-of-type {
   width: 48%;
   padding-right: 1%;
 }
+@media (max-width:500px) {
+  .home .content-section .text-content {
+    width: 100%;
+  }
+}
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
+}
+@media (max-width:500px) {
+  .home .content-section .img-content {
+    width: 100%;
+  }
 }
 .home .content-section .img-content img {
   border-radius: 10px;
@@ -223,6 +251,12 @@ hr:first-of-type {
 .home .inverse-content {
   padding-bottom: 30px;
   border-bottom: 2px dashed #C0C0C0;
+}
+@media (max-width:500px) {
+  .home .inverse-content {
+    display: flex;
+    flex-wrap: wrap-reverse;
+  }
 }
 .home .inverse-content .text-content {
   padding-left: 1%;
@@ -236,6 +270,11 @@ hr:first-of-type {
   width: 75%;
   margin: 0 auto 30px;
 }
+@media (max-width:500px) {
+  .home .content-destination {
+    width: 100%;
+  }
+}
 .home .content-destination img {
   border-radius: 10px;
 }
@@ -245,9 +284,19 @@ hr:first-of-type {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width:500px) {
+  .home .content-pick {
+    flex-wrap: wrap;
+  }
+}
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+@media (max-width:500px) {
+  .home .content-pick .destination {
+    width: 100%;
+  }
 }
 .home .content-pick .destination .btn {
   background-color: #008080;
@@ -268,28 +317,4 @@ hr:first-of-type {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
-}
-@media (max-width:500px) {
-  .container {
-    max-width: 450px;
-  }
-}
-@media (max-width:500px) {
-  .navigation {
-    flex-wrap: wrap;
-  }
-}
-@media (max-width:500px) {
-  .navigation h1 {
-    width: 100%;
-    text-align: center;
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width:500px) {
-  .navigation nav {
-    width: 100%;
-    justify-content: space-between;
-    border: 2px solid red;
-  }
 }
